syntax = "proto3";
package v1alpha1;

message CreateReq{
	ObjectMeta objectMeta = 1;
	Status state = 2;
}

message ObjectMeta{
	string name  = 1;
	string namepsace  = 2;
	string uid  = 3;
	string creationTime = 4;
	map<string,string> labels  = 5;
	repeated OwnerReference ownerReference = 6;
}

message OwnerReference{
	string name = 1;
	string uid = 2;
}

message Status{
	string status = 1;
	map<string,RefCondition> resourceRef = 2;
	string completionTime = 3;
	PipelineRun pipelineRun = 4;
}

message RefCondition{
	string name = 1;
	repeated Condition conditions = 2;
}

message Condition{
	string status = 1;
	string reason = 2;
	string message = 3;
    string lastTransitionTime = 4;
}

message PipelineRun{
	string status = 1;
	repeated TaskRun taskRun = 2;
}

message TaskRun{
	string taskName = 1;
	string status = 2;
	string startTime = 3;
	string completionTime = 4;
	repeated Step step = 5;
}

message Step{
	string name = 1;
	string startTime = 2;
	string completionTime = 3;
}

message UpdateReq{
	ObjectMeta objectMeta = 1;
	Status state = 2;
}

message DeleteReq{
	ObjectMeta objectMeta = 1;
	Status state = 2;
}

message Resp{}

service Implant{
	rpc Create(CreateReq)returns(Resp);
	rpc Update(UpdateReq)returns(Resp);
	rpc Delete(DeleteReq)returns(Resp);
}